--- a/cicd-pipeline-ecs-composex/cfn-templates/ecr_repos.yml
+++ b/cicd-pipeline-ecs-composex/cfn-templates/ecr_repos.yml
@@ -4,13 +4,17 @@ Metadata:
 Parameters:
   RepositoryName:
     Type: String
-    AllowedPattern: [a-zA-Z0-9-]
+    AllowedPattern: '[a-zA-Z0-9-]+'
   ProdAccountId:
-    Type: String
-    AllowedPattern: [0-9]{12}
+    Type: AWS::SSM::Parameter::Value<String>
+    Default: /cicd/accounts/prod/id
+#    Type: String
+#    AllowedPattern: [0-9]{12}
   DevAccountId:
-    Type: String
-    AllowedPattern: [0-9]{12}
+    Type: AWS::SSM::Parameter::Value<String>
+    Default: /cicd/accounts/dev/id
+#    Type: String
+#    AllowedPattern: [0-9]{12}
 Resources:
   Repository:
     Type: AWS::ECR::Repository
@@ -23,8 +27,8 @@ Resources:
             Effect: Allow
             Principal:
               AWS:
-                - arn:aws:iam::{ProdAccountId}:root
-                - arn:aws:iam::${DevAccountId}:root
+                - !Sub arn:${AWS::Partition}:iam::${ProdAccountId}:root
+                - !Sub arn:${AWS::Partition}:iam::${DevAccountId}:root
             Action:
               - ecr:BatchCheckLayerAvailability
               - ecr:BatchGetImage
@@ -34,10 +38,6 @@ Resources:
               - ecr:ListImages
 Outputs:
   RepositoryArn:
-    Export:
-      Name: !Sub '${Repository}-ECRRepository-Arn'
     Value: !GetAtt 'Repository.Arn'
   RepositoryName:
-    Export:
-      Name: !Sub '${RepositoryName}-ECRRepository-Name'
     Value: !Ref 'Repository'
