--- a/cicd-pipeline-ecs-composex/cfn-templates/cd_pipeline.yml
+++ b/cicd-pipeline-ecs-composex/cfn-templates/cd_pipeline.yml
@@ -14,10 +14,16 @@ Parameters:
     Type: AWS::SSM::Parameter::Value<String>
     Default: /cicd/shared/s3/templates/name
 
-  DevAccountCloudFormationRoleArn:
+  DevAccountCfnRoleArn:
     Type: String
 
-  ProdAccountCloudFormationRoleArn:
+  DevAccountPipelineRoleArn:
+    Type: String
+
+  ProdAccountCfnRoleArn:
+    Type: String
+
+  ProdAccountPipelineRoleArn:
     Type: String
 
   ComposeRepositoryName:
@@ -110,6 +116,7 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
+        Version: 2012-10-17
         Statement:
           - Action:
               - sts:AssumeRole
@@ -117,9 +124,25 @@ Resources:
             Principal:
               Service:
                 - !Sub 'codepipeline.${AWS::URLSuffix}'
-        Version: '2012-10-17'
+            Condition:
+              Bool:
+                aws:SecureTransport: true
       Policies:
-        - PolicyDocument:
+        - PolicyName: CrossAccountAssume
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action:
+                  - sts:AssumeRole
+                Resource:
+                  - !Ref ProdAccountPipelineRoleArn
+                  - !Ref DevAccountPipelineRoleArn
+                Condition:
+                  Bool:
+                    aws:SecureTransport: true
+        - PolicyName: S3Access
+          PolicyDocument:
             Version: '2012-10-17'
             Statement:
               - Action:
@@ -130,7 +153,6 @@ Resources:
                 Effect: Allow
                 Resource:
                   - !Sub 'arn:${AWS::Partition}:s3:::${ArtifactsBucketName}/*'
-          PolicyName: S3Access
         - PolicyName: CodecommitAccess
           PolicyDocument:
             Version: 2012-10-17
@@ -155,35 +177,6 @@ Resources:
                 Effect: Allow
                 Resource: '*'
           PolicyName: CodeBuildAccess
-        - PolicyName: AccessForCloudFormation
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Action:
-                  - iam:PassRole
-                Condition:
-                  StringEqualsIfExists:
-                    iam:PassedToService:
-                      - !Sub 'cloudformation.${AWS::URLSuffix}'
-                Effect: Allow
-                Resource:
-                  - !Ref DevAccountCloudFormationRoleArn
-                  - !Ref ProdAccountCloudFormationRoleArn
-                Sid: AllowsPipelineToPassRoleToCfn
-              - Action:
-                  - cloudformation:CreateStack
-                  - cloudformation:DeleteStack
-                  - cloudformation:DescribeStacks
-                  - cloudformation:UpdateStack
-                  - cloudformation:CreateChangeSet
-                  - cloudformation:DeleteChangeSet
-                  - cloudformation:DescribeChangeSet
-                  - cloudformation:ExecuteChangeSet
-                  - cloudformation:SetStackPolicy
-                  - cloudformation:ValidateTemplate
-                Effect: Allow
-                Resource: '*'
-                Sid: AllowsCloudFormationAccess
         - PolicyName: KmsAccess
           PolicyDocument:
             Version: 2012-10-17
@@ -228,8 +221,10 @@ Resources:
       RestartExecutionOnUpdate: true
       RoleArn: !GetAtt 'CodePipelineRole.Arn'
       Stages:
-        - Actions:
-            - ActionTypeId:
+        - Name: PipelineSource
+          Actions:
+            - Name: DockerComposeSource
+              ActionTypeId:
                 Category: Source
                 Owner: AWS
                 Provider: CodeCommit
@@ -238,14 +233,13 @@ Resources:
                 BranchName: !Ref BranchName
                 PollForSourceChanges: false
                 RepositoryName: !Ref ComposeRepositoryName
-              Name: DockerComposeSource
               OutputArtifacts:
                 - Name: DockerComposeSource
               RunOrder: '1'
-          Name: PipelineSource
         - Name: !Sub 'GenerateCfnTemplates'
           Actions:
-            - ActionTypeId:
+            - Name: EcsComposeXGenerate
+              ActionTypeId:
                 Category: Build
                 Owner: AWS
                 Provider: CodeBuild
@@ -254,20 +248,20 @@ Resources:
                 ProjectName: !Ref EcsComposeXGenerate
               InputArtifacts:
                 - Name: DockerComposeSource
-              Name: EcsComposeX
               OutputArtifacts:
                 - Name: ComposeXOutput
               RunOrder: '1'
         - Name: !Sub 'DeployToDev'
           Actions:
-            - ActionTypeId:
+            - Name: DeployToDev
+              ActionTypeId:
                 Category: Deploy
                 Owner: AWS
                 Provider: CloudFormation
                 Version: '1'
               Configuration:
                 ActionMode: CREATE_UPDATE
-                RoleArn: !Ref DevAccountCloudFormationRoleArn
+                RoleArn: !Ref DevAccountCfnRoleArn
                 StackName: !Sub 'dev'
                 TemplatePath: !Sub 'ComposeXOutput::composex_root.yml'
 #                TemplateConfiguration: !Sub 'ComposeXOutput::composex_root.params.json'
@@ -276,8 +270,8 @@ Resources:
                 - Name: ComposeXOutput
               OutputArtifacts:
                 - Name: DevStackOutputs
-              Name: DeployToDev
               RunOrder: '1'
+              RoleArn: !Ref DevAccountPipelineRoleArn
         - Name: !Sub 'DestroyDev'
           Actions:
             - ActionTypeId:
@@ -287,7 +281,8 @@ Resources:
                 Version: '1'
               Configuration:
                 ActionMode: DELETE_ONLY
-                RoleArn: !Ref DevAccountCloudFormationRoleArn
+                RoleArn: !Ref DevAccountCfnRoleArn
                 StackName: !Sub 'dev'
               Name: DeployToDev
               RunOrder: '1'
+              RoleArn: !Ref DevAccountPipelineRoleArn
