--- a/cicd-pipeline-ecs-composex/cfn-templates/crossaccount-roles.yml
+++ b/cicd-pipeline-ecs-composex/cfn-templates/crossaccount-roles.yml
@@ -49,6 +49,39 @@ Resources:
                   - iam:UpdateRole
                   - iam:ListRolePolicies
                   - iam:GetRolePolicy
+        - PolicyName: KmsDecryptData
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Sid: DecryptEncryptArtifacts
+                Effect: Allow
+                Action:
+                  - kms:Decrypt
+                  - kms:DescribeKey
+                Resource:
+                  - !Sub 'arn:${AWS::Partition}:kms:${AWS::Region}:${CiAccountId}:key/${CiKmsKeyId}'
+        - PolicyName: S3Access
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Action:
+                  - s3:GetObject*
+                  - s3:ListBucket
+                  - s3:GetBucket*
+                Effect: Allow
+                Resource:
+                  - !Sub 'arn:${AWS::Partition}:s3:::${ArtifactsBucketName}'
+                  - !Sub 'arn:${AWS::Partition}:s3:::${ArtifactsBucketName}/*'
+                Sid: AllowRwToArtifactsBucket
+              - Action:
+                  - s3:GetObject*
+                  - s3:ListBucket
+                  - s3:GetBucket*
+                Effect: Allow
+                Sid: GetCloudformationTemplates
+                Resource:
+                  - !Sub 'arn:${AWS::Partition}:s3:::${CloudformationTemplatesBucketName}'
+                  - !Sub 'arn:${AWS::Partition}:s3:::${CloudformationTemplatesBucketName}/*'
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/PowerUserAccess
       AssumeRolePolicyDocument:
@@ -68,16 +101,6 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       Policies:
-        - PolicyName: PassRole
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Action:
-                  - iam:PassRole
-                Resource:
-                  - !GetAtt 'CloudformationRole.Arn'
-                Effect: Allow
-                Sid: PassRoleToCloudFormation
         - PolicyName: KmsDecryptData
           PolicyDocument:
             Version: 2012-10-17
@@ -85,20 +108,21 @@ Resources:
               - Sid: DecryptEncryptArtifacts
                 Effect: Allow
                 Action:
-                  - kms:DescribeKey
-                  - kms:GenerateDataKey*
+                  - kms:Encrypt
                   - kms:Decrypt
+                  - kms:ReEncrypt*
+                  - kms:GenerateDataKey*
+                  - kms:DescribeKey
                 Resource:
-                  - !Sub 'arn:${AWS::Partition}:kms:${AWS::Region}:${AWS::AccountId}:key/${CiKmsKeyId}'
+                  - !Sub 'arn:${AWS::Partition}:kms:${AWS::Region}:${CiAccountId}:key/${CiKmsKeyId}'
         - PolicyName: S3Access
           PolicyDocument:
             Version: '2012-10-17'
             Statement:
               - Action:
                   - s3:PutObject*
-                  - s3:GetObject
-                  - s3:GetObjectVersion
-                  - s3:HeadBucket
+                  - s3:GetObject*
+                  - s3:ListBucket
                   - s3:GetBucketLocation
                 Effect: Allow
                 Resource:
@@ -106,15 +130,42 @@ Resources:
                   - !Sub 'arn:${AWS::Partition}:s3:::${ArtifactsBucketName}/*'
                 Sid: AllowRwToArtifactsBucket
               - Action:
-                  - s3:GetObject
-                  - s3:GetObjectVersion
-                  - s3:HeadBucket
+                  - s3:GetObject*
+                  - s3:ListBucket
                   - s3:GetBucketLocation
                 Effect: Allow
                 Sid: GetCloudformationTemplates
                 Resource:
                   - !Sub 'arn:${AWS::Partition}:s3:::${CloudformationTemplatesBucketName}'
                   - !Sub 'arn:${AWS::Partition}:s3:::${CloudformationTemplatesBucketName}/*'
+        - PolicyName: AccessForCloudFormation
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Action:
+                  - iam:PassRole
+                Condition:
+                  StringEqualsIfExists:
+                    iam:PassedToService:
+                      - !Sub 'cloudformation.${AWS::URLSuffix}'
+                Effect: Allow
+                Resource:
+                  - !GetAtt 'CloudformationRole.Arn'
+                Sid: AllowsPipelineToPassRoleToCfn
+              - Action:
+                  - cloudformation:CreateStack
+                  - cloudformation:DeleteStack
+                  - cloudformation:DescribeStacks
+                  - cloudformation:UpdateStack
+                  - cloudformation:CreateChangeSet
+                  - cloudformation:DeleteChangeSet
+                  - cloudformation:DescribeChangeSet
+                  - cloudformation:ExecuteChangeSet
+                  - cloudformation:SetStackPolicy
+                  - cloudformation:ValidateTemplate
+                Effect: Allow
+                Resource: '*'
+                Sid: AllowsCloudFormationAccess
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
