--- a/cicd-pipeline-ecs-composex/cfn-templates/shared-buckets.yml
+++ b/cicd-pipeline-ecs-composex/cfn-templates/shared-buckets.yml
@@ -94,6 +94,7 @@ Resources:
             Resource: !Sub '${ArtifactsBucket.Arn}'
             Action:
               - s3:ListBucket
+              - s3:GetBucket*
             Principal:
               AWS:
                 - !Ref ProdAccountPipelineRoleId
@@ -138,6 +139,7 @@ Resources:
                 - !Ref DevAccountCfnRoleId
           - Action:
               - s3:ListBucket
+              - s3:GetBucket*
             Effect: Allow
             Resource:
               - !Sub '${CloudformationTemplatesBucket.Arn}'
@@ -158,7 +160,7 @@ Resources:
     Type: AWS::SSM::Parameter
     Properties:
       Name: !Sub '${SsmParameterPrefixShared}/s3/templates/name'
-      Value: !Ref ArtifactsBucket
+      Value: !Ref CloudformationTemplatesBucket
       Type: String
 
 Outputs:
